tests/istio_testcases/example_policies/sidecar_examples_w_onlineboutique/general_sidecar_examples_from_istio_ref/istio-sidecar-1.yaml
#The example below declares a Sidecar configuration in the prod-us1 namespace that configures the sidecars in the
#namespace to allow egress traffic to public services in the prod-us1, prod-apis, and the istio-system namespaces.

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: prod-us1
spec:
  egress:
  - hosts:
    - "prod-us1/*"
    - "prod-apis/*"
    - "istio-system/*"
